--- a/src/Attaque.css
+++ b/src/Attaque.css
@@ -1,4 +1,28 @@
-.game-board {
-  height: 60px;
+.game {
+  border-color: grey;
+}
+
+.game .game-board .board-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.game .game-board .board-row .board-square {
+  color: #00ff00;
+  border-style: solid;
+  border-width: 3px;
+  height: 50px;
+  width: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.5em;
 }
 /*# sourceMappingURL=Attaque.css.map */
