--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,5 @@
-body {
-  color: #00ff00;
-  background-image: url("metal.jpg");
-  font-family: 'Courier New', Courier, monospace;
-  background-size: 100% 100%;
-}
-
-h1 {
+.screen {
   background-color: black;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #00ff00;
-}
-
-h2, h3 {
-  border-style: solid;
-  border-width: 3px;
-  border-color: #00ff00;
-}
-
-.Card {
   border-style: solid;
   border-width: 3px;
   border-color: #00ff00;
@@ -43,6 +24,7 @@ h2, h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background-color: pink;
 }
 
 .App .Peintures {
@@ -66,33 +48,5 @@ h2, h3 {
   border-style: solid;
   border-width: 3px;
   border-color: #00ff00;
-}
-
-.game {
-  border-color: grey;
-}
-
-.game .game-board .board-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.game .game-board .board-row .board-square {
-  color: #00ff00;
-  border-style: solid;
-  border-width: 3px;
-  height: 50px;
-  width: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 1.5em;
 }
 /*# sourceMappingURL=index.css.map */
