--- a/src/Attaque.scss
+++ b/src/Attaque.scss
@@ -1,39 +1,50 @@
+@import "colors";
+@import "borders";
+
+// .attaque {
+//   cursor: crosshair;
+//   /* cursor-color: pink */
+//   caret-color: #00ff00;
+// }
 
 .game {
-    border-color: grey;
+  cursor: crosshair;
+  caret-color: $myScreenGreen; //PK MARCHE PAS??
+  
+  // border-color: grey;
+  // margin: auto;
+  // align-items: center;
+    // display: flex;
+  // justify-content: center;
+  .game-board {
+    // height: 80px;
+    // height: 40px;
     // margin: auto;
     // align-items: center;
-      // display: flex;
+    // display: flex;
+    // align-items: center;
     // justify-content: center;
-    .game-board {
-      // height: 80px;
-      // height: 40px;
-      // margin: auto;
-      // align-items: center;
-      // display: flex;
-      // align-items: center;
-      // justify-content: center;
-      // align-content: center;
-      .board-row {
+    // align-content: center;
+    .board-row {
+      display: flex;
+
+      .board-square {
+        // color: #00ff00 ;
+        // background-color: black;
+
+        border-style: solid;
+        border-width: 3px;
+
+        // border:1px solid black;
+        height: 30px;
+        width: 30px;
+        // background-color: red;
         display: flex;
-  
-        .board-square {
-          color: #00ff00 ;
-          // background-color: black;
-  
-          border-style: solid;
-          border-width: 3px;
-  
-          // border:1px solid black;
-          height: 50px;
-          width: 50px;
-          // background-color: red;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          // color:white;
-          font-size: 1.5em;
-        }
+        align-items: center;
+        justify-content: center;
+        // color:white;
+        font-size: 1.5em;
       }
     }
   }
+}
