--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,22 +1,12 @@
-link {
-  background-color: blue;
-  width: 30px;
+.menumenu {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 nav {
   /* width:128px; */
   /* height:800px; */
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #00ff00;
-  border-color: grey;
-  border-style: solid;
-  border-width: 3px;
   width: 80%;
   /* height: 100%; */
 }
