--- a/src/Menu.scss
+++ b/src/Menu.scss
@@ -1,20 +1,28 @@
 link {
-  background-color: blue;
-  width: 30px;
+  // background-color: blue;
+  // padding: 80px;
+}
+
+.menumenu {
+  // background-color: yellow;
+  // text-align: center;
+  // align-items: center;
+  justify-content: center;
+  // flex: auto;
 }
 
 nav {
   /* width:128px; */
   /* height:800px; */
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  
-  color: #00ff00 ;
-  // background-color: black;
-  border-color: grey;
-  border-style: solid;
-  border-width: 3px;
+  // text-align: center;
+  // align-items: center;
+  // justify-content: center;
+  // flex: auto;
+  // color: #00ff00 ;
+  // background-color: yellow;
+  // border-color: grey;
+  // border-style: solid;
+  // border-width: 3px;
   // padding: 0%;
   width: 80%;
   /* height: 100%; */
