--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,29 @@
-.screen {
-  background-color: black;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #00ff00;
+body {
+  color: #00ff00;
+  background-image: url("metal.jpg");
+  font-family: 'Courier New', Courier, monospace;
+  background-size: 100% 100%;
 }
 
-.Square {
-  width: 40px;
-  height: 40px;
+.screen {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: black;
+  border-style: solid;
+  border-width: 10px;
+  border-color: dimgray;
+}
+
+.textBox {
   border-style: solid;
   border-width: 3px;
   border-color: #00ff00;
+  margin: 10px;
 }
 
 .click {
   border: 3px solid pink  !important;
-}
-
-.App {
-  max-width: 1024px;
-  margin: auto;
-  padding: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: pink;
-}
-
-.App .Peintures {
-  margin: auto;
-}
-
-.App .Board {
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
-}
-
-.AUTRE {
-  width: 40px;
-  height: 40px;
-  background-color: aqua;
 }
 
 .messagesBoard {
