--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,21 @@ body {
 
 .messagesBoard {
   height: 200px;
-  border-style: solid;
+  border-style: dotted;
   border-width: 3px;
   border-color: #00ff00;
 }
+
+/* .App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
 /*# sourceMappingURL=index.css.map */
