--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 // }
 
 body {
-  color: #00ff00 ;
+  color: $myRadarGreen;
   background-image: url("metal.jpg");
   font-family: 'Courier New', Courier, monospace;
   background-size: 100% 100%;
@@ -59,8 +59,54 @@ h2,h3, ul {
   // width: 40px;
   height: 200px;
   // border:1px solid #00ff00;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #00ff00;
+  border-style: dotted;
+  border-width: $myTextBoxWidth;
+  border-color: $myRadarGreen;
 }
 
+
+
+// @import 'colors';
+
+
+// .marina {
+//   width: 50px;
+// }
+
+
+
+// .chatBox{
+//   border-style: solid;
+//   border-width: 3px;
+//   border-color: #00ff00;
+// }
+
+// .frontView {
+//   /* height: 300px; */
+// }
+
+// .topScreen {
+//   height: auto;
+//   /* height: 175px; */
+// }
+
+
+
+
+
+
+
+
+
+/* .App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
