--- a/src/Jeu.scss
+++ b/src/Jeu.scss
@@ -9,9 +9,10 @@
 
 .speed,
 .wheel{
+  // padding: auto;
   width: 100%;
-  height: 100%;
-  margin: auto;
+  // height: 100%;
+  // margin: auto;
 }
 
 .rightView,
