--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,13 @@ h2,h3, ul {
   // border-width: 3px;
 }
 
+.container {
+  // background-color: gold;
+  // text-align: center;
+  text-align: center;
+  // align-items: center;
+  // justify-content: center;
+}
 
 
 .messagesBoard {
