--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ body {
   border: 3px solid pink  !important;
 }
 
+.container {
+  text-align: center;
+}
+
 .messagesBoard {
   height: 200px;
   border-style: dotted;
