--- a/src/Menu.css
+++ b/src/Menu.css
@@ -7,7 +7,14 @@
 nav {
   /* width:128px; */
   /* height:800px; */
-  width: 80%;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: yellow;
   /* height: 100%; */
 }
 /*# sourceMappingURL=Menu.css.map */
