--- a/src/Menu.scss
+++ b/src/Menu.scss
@@ -14,16 +14,16 @@ link {
 nav {
   /* width:128px; */
   /* height:800px; */
-  // text-align: center;
-  // align-items: center;
-  // justify-content: center;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
   // flex: auto;
   // color: #00ff00 ;
-  // background-color: yellow;
+  background-color: yellow;
   // border-color: grey;
   // border-style: solid;
   // border-width: 3px;
   // padding: 0%;
-  width: 80%;
+  // width: 80%;
   /* height: 100%; */
 }
