--- a/src/Accueil.css
+++ b/src/Accueil.css
@@ -1,4 +1,4 @@
-.accueil {
+.accueilPhoto {
   /* width:128px; */
   /* height:800px; */
   text-align: center;
@@ -9,12 +9,11 @@
   border-style: solid;
   border-width: 3px;
   width: 80%;
-  height: 600px;
   margin: auto;
 }
 
 .textboxaccueil {
-  opacity: 0.3;
+  opacity: 0.5;
   background-color: white;
   border-style: solid;
   border-width: 3px;
