--- a/src/Accueil.scss
+++ b/src/Accueil.scss
@@ -2,7 +2,7 @@
 @import "borders";
 
 
-.accueil {
+.accueilPhoto {
   // opacity: 0.6;
   /* width:128px; */
   /* height:800px; */
@@ -19,12 +19,12 @@
   border-width: $myTextBoxWidth;
   // padding: 0%;
   width: 80%;
-  height: 600px;
+  // height: max-content;
   margin: auto;
 }
 
 .textboxaccueil {
-  opacity:0.3;
+  opacity:0.5;
   background-color: white;
 
   border-style: $myTextBoxStyle;
