--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,20 +1,10 @@
-.menumenu {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+link:hover {
+  color: gold;
 }
 
 nav {
   /* width:128px; */
   /* height:800px; */
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: yellow;
   /* height: 100%; */
 }
 /*# sourceMappingURL=Menu.css.map */
