--- a/src/Menu.scss
+++ b/src/Menu.scss
@@ -1,29 +1,34 @@
-link {
+link:hover {
   // background-color: blue;
   // padding: 80px;
+  cursor: crosshair;
+  // cursor-color: red;
+  caret-color: $myRadarGreen;
+  color:gold
 }
 
 .menumenu {
   // background-color: yellow;
   // text-align: center;
   // align-items: center;
-  justify-content: center;
+  // justify-content: center;
   // flex: auto;
 }
 
-nav {
+nav{
   /* width:128px; */
   /* height:800px; */
-  text-align: center;
-  align-items: center;
-  justify-content: center;
+  // text-align: center;
+  // align-items: center;
+  // justify-content: center;
   // flex: auto;
   // color: #00ff00 ;
-  background-color: yellow;
+  // background-color: yellow;
   // border-color: grey;
   // border-style: solid;
   // border-width: 3px;
   // padding: 0%;
   // width: 80%;
   /* height: 100%; */
+  // margin: auto;
 }
