--- a/src/index.scss
+++ b/src/index.scss
@@ -63,14 +63,14 @@ h2,h3, ul {
 }
 
 
-.messagesBoard {
-  // width: 40px;
-  height: 200px;
-  // border:1px solid #00ff00;
-  border-style: dotted;
-  border-width: $myTextBoxWidth;
-  border-color: $myRadarGreen;
-}
+// .messagesBoard {
+//   // width: 40px;
+//   height: 200px;
+//   // border:1px solid #00ff00;
+//   border-style: dotted;
+//   border-width: $myTextBoxWidth;
+//   border-color: $myRadarGreen;
+// }
 
 
 
