--- a/src/Jeu.css
+++ b/src/Jeu.css
@@ -4,8 +4,7 @@
 }
 
 .rightView,
-.leftView,
-.frontView {
+.leftView {
   /* width:128px; */
   /* height:800px; */
   /* background-color: black; */
@@ -15,5 +14,14 @@
   padding: 0%;
   /* width: 100%; */
   /* height: 100%; */
+}
+
+.frontView {
+  border-color: dimgray;
+  border-style: solid;
+  border-width: 10px;
+  padding: 0%;
+  height: 20%;
+  width: 100%;
 }
 /*# sourceMappingURL=Jeu.css.map */
